mee submission 2 - pre- other author check

--- a/appendix 2/varprop.tex
+++ b/appendix 2/varprop.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{amsart}
 \usepackage{geometry}                % See geometry.pdf to learn the layout options. There are lots.
-\geometry{letterpaper}                   % ... or a4paper or a5paper or ... 
+\geometry{a4paper}                   % ... or a4paper or a5paper or ... 
 %\geometry{landscape}                % Activate for for rotated page geometry
 %\usepackage[parfill]{parskip}    % Activate to begin paragraphs with an empty line rather than an indent
 \usepackage{graphicx}
@@ -10,7 +10,7 @@
 \usepackage{times, natbib, bm}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Appendix B: Calculation of variance in density surface models}
+\title{{\Small Spatial models for distance sampling data:\\ recent developments and future directions}\\ \mbox{} \\ Appendix B: Calculation of variance in density surface models}
 \author{David L. Miller, M. Louise Burt, Eric A. Rexstad and Len Thomas}
 %\date{}                                           % Activate to display a given date or no date
 
