--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -1,5 +1,17 @@
-%% Created using Papers on Mon, 06 May 2013.
-%% http://mekentosj.com/papers/
+%% Created using Papers on Mon, 27 May 2013.
+%% http://papersapp.com/papers/
+
+@article{verhoef:2012,
+author = {Ver Hoef, Jay M.},
+title = {Who invented the delta method?},
+journal = {The American Statistician},
+volume = {66},
+number = {2},
+pages = {124-127},
+year = {2012},
+doi = {10.1080/00031305.2012.687494},
+}
+
 
 @article{Baddeley:2000to,
 author = {Baddeley, A and Turner, R.},
@@ -22,7 +34,7 @@ uri = {\url{papers2://publication/uuid/84517B79-4C59-42FF-A6E3-AD735D646120}}
 @article{Barry:2002bm,
 author = {Barry, Simon C and Welsh, A H},
 title = {{Generalized additive modelling and zero inflated count data}},
-journal = {Ecological modelling},
+journal = {Ecological Modelling},
 year = {2002},
 volume = {157},
 number = {2-3},
@@ -33,10 +45,9 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-23T00:05:42GMT+00:00},
-date-modified = {2013-05-06T15:13:33GMT+00:00},
+date-modified = {2013-05-27T16:02:55GMT+00:00},
 abstract = {This paper describes a flexible method for modelling zero inflated count data which are typically found when trying to model and predict species distributions. Zero inflated data are defined as data that has a larger proportion of zeros than expected from pure count ( ... 
 },
-url = {http://linkinghub.elsevier.com/retrieve/pii/S0304380002001941},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2002/Barry-Ecological_modelling-2002.pdf},
 file = {{Barry-Ecological_modelling-2002.pdf:/Users/dill/Dropbox/Papers2/2002/Barry-Ecological_modelling-2002.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1016/S0304-3800(02)00194-1}}
@@ -86,7 +97,7 @@ uri = {\url{papers2://publication/uuid/C0B8D2CE-EB45-4674-8629-C68D3EA3CD67}}
 }
 
 @book{Buckland:2004ts,
-author = {Buckland, Stephen T and anderson, D R and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
+author = {Buckland, Stephen T and Anderson, D R and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
 title = {{Advanced Distance Sampling}},
 publisher = {Oxford University Press},
 year = {2004},
@@ -98,7 +109,7 @@ uri = {\url{papers2://publication/uuid/1B0A4642-4BC9-4EDA-8F3B-E8C43E2221B9}}
 }
 
 @book{Buckland:2001vm,
-author = {Buckland, Stephen T and anderson, D R and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
+author = {Buckland, Stephen T and Anderson, D R and Burnham, Kenneth P and Laake, Jeffrey L and Borchers, David L and Thomas, Len},
 title = {{Introduction to Distance Sampling}},
 publisher = {Oxford University Press},
 year = {2001},
@@ -125,14 +136,14 @@ uri = {\url{papers2://publication/uuid/35D8D7E1-3D32-4370-BBBB-4D83DBD63510}}
 @article{Candy:2004tb,
 author = {Candy, SG},
 title = {{Modelling catch and effort data using generalised linear models, the Tweedie distribution, random vessel effects and random stratum-by-year effects}},
-journal = {Ccamlr Science},
+journal = {{CCAMLR} Science},
 year = {2004},
 volume = {11},
 pages = {59--80},
 read = {Yes},
 rating = {0},
 date-added = {2012-07-09T20:12:20GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-27T14:56:04GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf},
 file = {{Candy-CCAMLR_Science-2004.pdf:/Users/dill/Dropbox/Papers2/2004/Candy-CCAMLR_Science-2004.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
@@ -140,7 +151,7 @@ uri = {\url{papers2://publication/uuid/C3059294-39F2-44B8-84DE-BC66DA2C3835}}
 
 @article{Chelgren:2011us,
 author = {Chelgren, NATHAN D and Samora, BARBARA and Adams, MICHAEL J and McCreary, BROME},
-title = {{Using spatiotemporal models and distance sampling to map the space use and abundance of newly metamorphosed western toads (Anaxyrus boreas)}},
+title = {{Using spatiotemporal models and distance sampling to map the space use and abundance of newly metamorphosed western toads (\textit{Anaxyrus boreas})}},
 journal = {Herpetological Conservation and Biology},
 year = {2011},
 volume = {6},
@@ -149,8 +160,7 @@ pages = {175--190},
 read = {Yes},
 rating = {0},
 date-added = {2013-04-29T19:34:55GMT+00:00},
-date-modified = {2013-05-02T15:45:59GMT+00:00},
-url = {http://www.herpconbio.org/Volume_6/Issue_2/Chelgren_etal_2011.pdf},
+date-modified = {2013-05-27T16:02:13GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Chelgren--2011.pdf},
 file = {{Chelgren--2011.pdf:/Users/dill/Dropbox/Papers2/2011/Chelgren--2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/C8330FE7-600B-40D0-A4A4-8996DD6BC3DB}}
@@ -174,22 +184,20 @@ uri = {\url{papers2://publication/uuid/A6409608-C46C-440B-9851-8CF07599E25F}}
 
 @article{Conn:2012bx,
 author = {Conn, Paul B and Laake, Jeffrey L and Johnson, Devin S},
-title = {{A Hierarchical Modeling Framework for Multiple Observer Transect Surveys}},
-journal = {PloS one},
+title = {{A hierarchical modeling framework for multiple observer transect surveys}},
+journal = {{P}{L}o{S} {ONE}},
 year = {2012},
 volume = {7},
 number = {8},
 pages = {e42294},
 publisher = {Public Library of Science},
-doi = {10.1371/journal.pone.0042294.g001},
 read = {Yes},
 rating = {0},
 date-added = {2013-04-29T15:32:13GMT+00:00},
-date-modified = {2013-05-02T20:46:11GMT+00:00},
-url = {http://dx.plos.org/10.1371/journal.pone.0042294},
+date-modified = {2013-05-27T16:05:14GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2012/Conn--2012.pdf},
 file = {{Conn--2012.pdf:/Users/dill/Dropbox/Papers2/2012/Conn--2012.pdf:application/pdf}},
-uri = {\url{papers2://publication/doi/10.1371/journal.pone.0042294.g001}}
+uri = {\url{papers2://publication/uuid/0B25BCA6-C2D8-4CF4-AB15-308000F9ABCE}}
 }
 
 @book{cox1980point,
@@ -231,8 +239,7 @@ isbn = {9780412042317},
 language = {English},
 rating = {0},
 date-added = {2012-10-25T21:11:27GMT+00:00},
-date-modified = {2013-02-25T15:11:59GMT+00:00},
-url = {http://books.google.com/books?id=gLlpIUxRntoC&dq=an+introduction+to+the+bootstrap&hl=&cd=1&source=gbs_api},
+date-modified = {2013-05-27T16:08:30GMT+00:00},
 uri = {\url{papers2://publication/uuid/5ED29765-F078-4FC5-A6E3-D160C5309FB5}}
 }
 
@@ -261,7 +268,7 @@ uri = {\url{papers2://publication/doi/10.1214/aos/1176344552}}
 @article{Ferguson:2006ex,
 author = {Ferguson, Megan C and Barlow, Jay and Fiedler, Paul and Reilly, Stephen B and Gerrodette, Tim},
 title = {{Spatial models of delphinid (family Delphinidae) encounter rate and group size in the eastern tropical Pacific Ocean}},
-journal = {Ecological modelling},
+journal = {Ecological Modelling},
 year = {2006},
 volume = {193},
 number = {3},
@@ -271,8 +278,7 @@ doi = {10.1016/j.ecolmodel.2005.10.034},
 read = {Yes},
 rating = {0},
 date-added = {2013-04-29T20:12:56GMT+00:00},
-date-modified = {2013-05-02T18:56:40GMT+00:00},
-url = {http://www.sciencedirect.com/science/article/pii/S0304380005004898},
+date-modified = {2013-05-27T16:07:24GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2006/Ferguson-Ecological_modelling-2006.pdf},
 file = {{Ferguson-Ecological_modelling-2006.pdf:/Users/dill/Dropbox/Papers2/2006/Ferguson-Ecological_modelling-2006.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1016/j.ecolmodel.2005.10.034}}
@@ -288,7 +294,6 @@ date-added = {2013-05-06T14:53:47GMT+00:00},
 date-modified = {2013-05-06T14:54:18GMT+00:00},
 abstract = {... JavaScript required for article outline. Computational  Statistics {\&} Data  Analysis . Volume 38 , Issue 4, 28 February 2002 , Pages 367 -- 378 . Nonlinear Methods and Data Mining. Cover image. Stochastic  gradient  boosting . Jerome H. Friedman . Department of Statistics and Stanford ... 
 },
-url = {http://www.sciencedirect.com/science/article/pii/S0167947301000652},
 uri = {\url{papers2://publication/uuid/A6D8A593-D97B-4C4E-AD27-6E50907391B4}}
 }
 
@@ -307,13 +312,12 @@ date-added = {2012-05-29T19:20:06GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
 abstract = {Abstract Markov chain Monte Carlo methods for Bayesian computation have until recently been restricted to problems where the joint distribution of all variables has a density with respect to some fixed standard underlying measure. They have therefore not been ... 
 },
-url = {http://biomet.oxfordjournals.org/content/82/4/711},
 uri = {\url{papers2://publication/doi/10.1093/biomet/82.4.711}}
 }
 
 @article{Halpin:2009je,
 author = {Halpin, Patrick and Read, Andrew and Fujioka, Ei and Best, Ben and Donnelly, Ben and Hazen, Lucie and Kot, Connie and Urian, Kim and LaBrecque, Erin and Dimatteo, Andrew and Cleary, Jesse and Good, Caroline and Crowder, Larry and Hyrenbach, K David},
-title = {{OBIS-SEAMAP: The World Data Center for Marine Mammal, Sea Bird, and Sea Turtle Distributions}},
+title = {{OBIS-SEAMAP: The world data Center for marine mammal, sea bird, and sea turtle distributions}},
 journal = {Oceanography},
 year = {2009},
 volume = {22},
@@ -323,7 +327,7 @@ month = jun,
 doi = {10.5670/oceanog.2009.42},
 rating = {0},
 date-added = {2012-12-21T10:41:26GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-27T16:08:03GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Halpin-Oceanog.-2009.pdf},
 file = {{Halpin-Oceanog.-2009.pdf:/Users/dill/Dropbox/Papers2/2009/Halpin-Oceanog.-2009.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.5670/oceanog.2009.42}}
@@ -371,9 +375,8 @@ doi = {10.1016/j.stamet.2013.03.001},
 read = {Yes},
 rating = {0},
 date-added = {2013-04-29T22:02:31GMT+00:00},
-date-modified = {2013-05-06T13:56:01GMT+00:00},
+date-modified = {2013-05-27T16:11:48GMT+00:00},
 abstract = {Statistical Methodology, doi:10.1016/j.stamet.2013.03.001},
-url = {http://dx.doi.org/10.1016/j.stamet.2013.03.001},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2013/Ver_Hoef-Statistical_Methodology-2013.pdf},
 file = {{Ver_Hoef-Statistical_Methodology-2013.pdf:/Users/dill/Dropbox/Papers2/2013/Ver_Hoef-Statistical_Methodology-2013.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1016/j.stamet.2013.03.001}}
@@ -408,23 +411,25 @@ journal = {Journal of the Royal Statistical Society. Series B, Statistical Metho
 year = {1987},
 volume = {49},
 pages = {127--162},
+read = {Yes},
 rating = {0},
 date-added = {2012-07-09T20:09:31GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
+date-modified = {2013-05-27T15:02:29GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/1987/J%C3%B8rgensen-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-1987.pdf},
+file = {{Jørgensen-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-1987.pdf:/Users/dill/Dropbox/Papers2/1987/Jørgensen-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-1987.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/626E6348-3011-4C95-88E0-2872D18033E7}}
 }
 
 @book{Link:2009wv,
 author = {Link, W A and Barker, R J},
 title = {{Bayesian Inference: with ecological applications}},
-publisher = {Academic Press},
+publisher = {Academic Press, London, UK},
 year = {2009},
 rating = {0},
 date-added = {2013-05-02T20:10:57GMT+00:00},
-date-modified = {2013-05-02T20:13:53GMT+00:00},
+date-modified = {2013-05-27T16:08:21GMT+00:00},
 abstract = {Statistical theory is primarily a product of the twentieth century. The prevailing school of thought builds on the frequentist philosophy developed by RA Fisher, the eminent biological theorist and experimentalist. Fisher's philosophy has been so thoroughly embraced that it ... 
 },
-url = {http://books.google.com/books?hl=en&lr=&id=hecon2l2QPcC&oi=fnd&pg=PP2&dq=link+barker&ots=S8--1npyLq&sig=TLCsfPaN2IRM1q5Tnl84lTlye1M},
 uri = {\url{papers2://publication/uuid/3BC1A19F-AE25-471E-A858-C83B85FBE9E8}}
 }
 
@@ -479,7 +484,6 @@ date-added = {2012-10-14T16:37:06GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
 abstract = {Many European countries have recently experienced a substantial increase in the proportion of immigrants in their populations. The incidence of resident foreigners calculated at a national level does not provide information on the local spatial and temporal ... 
 },
-url = {http://doi.wiley.com/10.1111/j.1467-9574.2011.00500.x},
 uri = {\url{papers2://publication/doi/10.1111/j.1467-9574.2011.00500.x}}
 }
 
@@ -488,21 +492,16 @@ author = {McCullagh, Peter and Nelder, John A},
 title = {{Generalized Linear Models}},
 publisher = {Chapman {\&} Hall/CRC},
 year = {1989},
-isbn = {9780412317606},
 language = {English},
 read = {Yes},
 rating = {0},
-date-added = {2012-05-29T19:34:30GMT+00:00},
-date-modified = {2013-02-25T15:02:23GMT+00:00},
-abstract = {An outline of generalized linear models; Models for continuous data with constant variance; Binary data; Models for polytomous data; Log-linear models; Conditional likelihoods; Models with constant coefficient of variation; Quasi-likelihood functions; Joint modelling of mean and dispersion; Models with additional non-linear parameters; Model checking; Model for survival data; Components of dispersion; Further topics.},
-url = {http://books.google.com/books?id=h9kFH2_FfBkC&printsec=frontcover&dq=mccullugh+nelder&cd=1&source=gbs_api},
-uri = {\url{papers2://publication/uuid/1E03DBA3-F2EE-4807-AFFC-053B4E1396A0}}
 }
 
 @article{Miller:2012tm,
 author = {Miller, David Lawrence and Wood, Simon N},
 title = {{Finite area smoothing with generalized distance splines}},
 pages = {1--27},
+year = {submitted},
 read = {Yes},
 rating = {0},
 date-added = {2012-10-30T20:28:53GMT+00:00},
@@ -525,6 +524,35 @@ file = {{Miller-1.pdf:/Users/dill/Dropbox/Papers2/Unknown/Miller-1.pdf:applicati
 uri = {\url{papers2://publication/uuid/7C8EF69D-7597-4316-97B2-E948BC8EC41F}}
 }
 
+@manual{Miller:2013to,
+title = {{dsm: Density surface modelling of distance sampling data}},
+author = {Miller, David Lawrence and Rexstad, E A and Burt, M L and Bravington, Mark V and Hedley, Sharon L},
+version = {2.0.3},
+year = {2013},
+rating = {0},
+date-added = {2013-05-02T17:45:14GMT+00:00},
+date-modified = {2013-05-14T14:46:23GMT+00:00},
+url = {http://github.com/dill/dsm},
+uri = {\url{papers2://publication/uuid/F79A1988-89AF-46EC-BAD5-42EC0CB83F3E}}
+}
+
+@phdthesis{Miller:2012wy,
+author = {Miller, David Lawrence},
+title = {{On smooth models for complex domains and distances}},
+school = {University of Bath},
+year = {2012},
+month = mar,
+publisher = {University of Bath},
+affiliation = {University of Bath},
+read = {Yes},
+rating = {0},
+date-added = {2012-05-29T18:20:22GMT+00:00},
+date-modified = {2013-05-27T14:52:40GMT+00:00},
+local-url = {file://localhost/Users/dill/Dropbox/Papers2/2012/Miller--2012.pdf},
+file = {{Miller--2012.pdf:/Users/dill/Dropbox/Papers2/2012/Miller--2012.pdf:application/pdf}},
+uri = {\url{papers2://publication/uuid/E3AFE3EC-29F7-441D-B747-F49A44DD371A}}
+}
+
 @article{Moore:2011jf,
 author = {Moore, Jeffrey E and Barlow, Jay},
 title = {{Bayesian state-space model of fin whale abundance trends from a 1991-2008 time series of line-transect surveys in the California Current}},
@@ -540,7 +568,6 @@ read = {Yes},
 rating = {0},
 date-added = {2013-04-29T15:19:57GMT+00:00},
 date-modified = {2013-05-02T19:40:11GMT+00:00},
-url = {http://doi.wiley.com/10.1111/j.1365-2664.2011.02018.x},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Moore-Journal_of_Applied_Ecology-2011.pdf},
 file = {{Moore-Journal_of_Applied_Ecology-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Moore-Journal_of_Applied_Ecology-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2011.02018.x}}
@@ -548,7 +575,7 @@ uri = {\url{papers2://publication/doi/10.1111/j.1365-2664.2011.02018.x}}
 
 @article{Niemi:2010kx,
 author = {Niemi, Aki and Fern{\'a}ndez, Carmen},
-title = {{Bayesian Spatial Point Process Modeling of Line Transect Data}},
+title = {{Bayesian spatial point process modeling of line transect data}},
 journal = {Journal of Agricultural, Biological, and Environmental Statistics},
 year = {2010},
 volume = {15},
@@ -559,7 +586,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T18:36:53GMT+00:00},
-date-modified = {2013-05-06T13:48:52GMT+00:00},
+date-modified = {2013-05-27T16:09:54GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf},
 file = {{Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:/Users/dill/Dropbox/Papers2/2010/Niemi-Journal_of_Agricultural_Biological_and_Environmental_Statistics-2010.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1007/s13253-010-0024-8}}
@@ -575,7 +602,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-03-26T02:03:41GMT+00:00},
 date-modified = {2013-05-06T15:19:22GMT+00:00},
-url = {http://www.sciencedirect.com/science/article/pii/S0006320711004319},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf},
 file = {{Oppel-Biological_Conservation-2011-1.pdf:/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/B3C32464-1B9E-431F-AB3B-008034DE8C2E}}
@@ -585,8 +611,9 @@ uri = {\url{papers2://publication/uuid/B3C32464-1B9E-431F-AB3B-008034DE8C2E}}
 author = {Petersen, I K and MacKenzie, M L and Rexstad, E A and Wisz, M S and Fox, A D},
 title = {{Comparing pre- and post-construction distributions of long-tailed ducks \emph{Clangula hyemalis }in and around the Nysted offshore wind farm, Denmark:
 a quasi-designed experiment accounting for imperfect detection, local surface features and autocorrelation}},
+institution = {Centre for Research into Enivironmental and Ecological Modelling},
 year = {2011},
-number = {2011-1},
+number = {Technical report 2011-1},
 month = sep,
 publisher = {Centre for Research into Enivironmental and Ecological Modelling},
 read = {Yes},
@@ -652,14 +679,12 @@ uri = {\url{papers2://publication/uuid/00E9744B-A84D-48DE-98FC-070B3329833C}}
 author = {Royle, J Andrew and Dorazio, Robert Matthew},
 title = {{Hierarchical Modeling and Inference in Ecology}},
 year = {2008},
-series = {The Analysis of Data from Populations, Metapopulations and Communities},
 month = jul,
-isbn = {9780123740977},
+publisher={Academic Press, London, UK},
 language = {English},
 rating = {0},
 date-added = {2013-01-09T18:11:21GMT+00:00},
-date-modified = {2013-05-06T16:11:57GMT+00:00},
-url = {http://books.google.com/books?id=rDppWpVP6a0C&printsec=frontcover&dq=Hierarchical+modeling+and+inference+in+ecology+inauthor:royle&hl=&cd=1&source=gbs_api},
+date-modified = {2013-05-27T16:10:46GMT+00:00},
 uri = {\url{papers2://publication/uuid/C505FA0C-6720-42D8-9FB2-9668709A2B5B}}
 }
 
@@ -714,7 +739,6 @@ read = {Yes},
 rating = {0},
 date-added = {2013-04-30T12:49:24GMT+00:00},
 date-modified = {2013-05-06T16:15:22GMT+00:00},
-url = {http://doi.wiley.com/10.1002/jwmg.216},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Schmidt-The_Journal_of_Wildlife_Management-2011.pdf},
 file = {{Schmidt-The_Journal_of_Wildlife_Management-2011.pdf:/Users/dill/Dropbox/Papers2/2011/Schmidt-The_Journal_of_Wildlife_Management-2011.pdf:application/pdf}},
 uri = {\url{papers2://publication/doi/10.1002/jwmg.216}}
@@ -722,14 +746,14 @@ uri = {\url{papers2://publication/doi/10.1002/jwmg.216}}
 
 @article{ScottHayward:2011tc,
 author = {Scott-Hayward, L A S and MacKenzie, M L and Donovan, C R and Walker, C G and Ashe, E},
-title = {{Complex Region Spatial Smoother (CReSS)}},
+title = {{Complex region spatial smoother (CReSS)}},
 journal = {Journal of Computational and Graphical Statistics},
 year = {2013},
 affiliation = {University of St Andrews},
 read = {Yes},
 rating = {0},
 date-added = {2012-06-05T03:37:06GMT+00:00},
-date-modified = {2013-05-06T15:19:19GMT+00:00},
+date-modified = {2013-05-27T16:11:05GMT+00:00},
 local-url = {file://localhost/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf},
 file = {{Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:/Users/dill/Dropbox/Papers2/2013/Scott-Hayward-Journal_of_Computational_and_Graphical_Statistics-2013.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34CFE03F-3099-4CE8-B5CD-6907A80F513D}}
@@ -744,8 +768,7 @@ language = {English},
 read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:06:01GMT+00:00},
-date-modified = {2013-04-02T15:38:20GMT+00:00},
-url = {http://books.google.com/books?id=bnGaPQAACAAJ&dq=seber&cd=10&source=gbs_api},
+date-modified = {2013-05-27T16:11:20GMT+00:00},
 uri = {\url{papers2://publication/uuid/8BEB690D-5749-411B-8CAC-901EB9E6606C}}
 }
 
@@ -799,8 +822,6 @@ read = {Yes},
 rating = {0},
 date-added = {2012-05-29T19:49:42GMT+00:00},
 date-modified = {2013-02-25T15:02:23GMT+00:00},
-abstract = {Praise for the Second Edition "This book has never had a competitor. It is the only book that takes a broad approach to sampling . . . any good personal statistics library should include a copy of this book." --Technometrics "Well-written . . . an excellent book on an important subject. Highly recommended." --Choice "An ideal reference for scientific researchers and other professionals who use sampling." --Zentralblatt Math Features new developments in the field combined with all aspects of obtaining, interpreting, and using sample data Sampling provides an up-to-date treatment of both classical and modern sampling design and estimation methods, along with sampling methods for rare, clustered, and hard-to-detect populations. This Third Edition retains the general organization of the two previous editions, but incorporates extensive new material--sections, exercises, and examples--throughout. Inside, readers will find all-new approaches to explain the various techniques in the book; new figures to assist in better visualizing and comprehending underlying concepts such as the different sampling strategies; computing notes for sample selection, calculation of estimates, and simulations; and more. Organized into six sections, the book covers basic sampling, from simple random to unequal probability sampling; the use of auxiliary data with ratio and regression estimation; sufficient data, model, and design in practical sampling; useful designs such as stratified, cluster and systematic, multistage, double and network sampling; detectability methods for elusive populations; spatial sampling; and adaptive sampling designs. Featuring a broad range of topics, Sampling, Third Edition serves as a valuable reference on useful sampling and estimation methods for researchers in various fields of study, including biostatistics, ecology, and the health sciences. The book is also ideal for courses on statistical sampling at the upper-undergraduate and graduate levels.},
-url = {http://books.google.com/books?id=qukULxJ--QAC&printsec=frontcover&dq=intitle:sampling+inauthor:thompson&cd=1&source=gbs_api},
 uri = {\url{papers2://publication/uuid/F844F284-F8FD-45EB-B547-941C0530D788}}
 }
 
@@ -922,4 +943,54 @@ local-url = {file://localhost/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_th
 file = {{Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:/Users/dill/Dropbox/Papers2/2003/Wood-Journal_of_the_Royal_Statistical_Society._Series_B_Statistical_Methodology-2003.pdf:application/pdf}},
 uri = {\url{papers2://publication/uuid/34D20AF3-652A-4D99-B96D-01D4641008B2}}
 }
+
+@article{Dunn:2005wp,
+author = {Dunn, PK and Smyth, GK},
+title = {{Series evaluation of Tweedie exponential dispersion models}},
+journal = {Statistics and Computing},
+year = {2005},
+read = {Yes},
+rating = {0},
+volume={15},
+pages={267--280},
+date-added = {2011-03-09T15:51:06GMT+00:00},
+date-modified = {2013-05-28T19:32:09GMT+00:00},
+}
+
+
+@book{ruppert2003semiparametric,
+author = {Ruppert, D. and Wand, M.P. and Carroll, Raymond J},
+title = {{Semiparametric Regression}},
+publisher = {Cambridge University Press},
+year = {2003},
+series = {Cambridge Series on Statistical and Probabilistic Mathematics},
+pmid = {2002041460},
+read = {Yes},
+rating = {0},
+date-added = {2012-06-04T18:16:54GMT+00:00},
+date-modified = {2013-05-29T15:46:11GMT+00:00},
+}
+
+
+@article{Shono:2008ge,
+author = {Shono, Hiroshi},
+title = {{Application of the {T}weedie distribution to zero-catch data in {CPUE} analysis}},
+journal = {Fisheries Research},
+year = {2008},
+volume = {93},
+number = {1-2},
+pages = {154--162},
+}
+
+
+@article{Peel:2012jc,
+author = {Peel, D and Bravington, Mark V and Kelly, N and Wood, Simon N and Knuckey, I},
+title = {{A Model-Based Approach to Designing a Fishery-Independent Survey}},
+journal = {Journal of Agricultural, Biological, and Environmental Statistics},
+year = {2012},
+volume = {18},
+number = {1},
+pages = {1--21},
+}
+
 
